chore: preserve local work before syncing main