@@ -6,7 +6,6 @@ import com.zone.agri.entity.enums.OrderStatus;
 import com.zone.agri.exception.BadRequestException;
 import com.zone.agri.exception.NotFoundException;
 import com.zone.agri.repository.OrderRepository;
-import com.zone.agri.repository.SubOrderRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,7 +14,6 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,14 +29,7 @@ public class AdminOrderWorkflowService {
             OrderStatus.PROCESSING,
             OrderStatus.READY_FOR_PICKUP);
 
-    private static final Set<OrderStatus> SHIPPABLE_SUB_STATUSES = EnumSet.of(
-            OrderStatus.CONFIRMED,
-            OrderStatus.PROCESSING,
-            OrderStatus.READY_FOR_PICKUP,
-            OrderStatus.SHIPPING);
-
     private final OrderRepository orderRepository;
-    private final SubOrderRepository subOrderRepository;
 
     @Transactional
     public void approvePackingAndShip(Long orderId) {
@@ -59,26 +50,11 @@ public class AdminOrderWorkflowService {
                 ? Collections.emptyList()
                 : order.getSubOrders().stream()
                         .filter(subOrder -> !CLOSED_STATUSES.contains(subOrder.getStatus()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (!activeSubOrders.isEmpty()) {
-            boolean hasInvalidSubOrder = activeSubOrders.stream()
-                    .map(SubOrder::getStatus)
-                    .anyMatch(status -> status == null || !SHIPPABLE_SUB_STATUSES.contains(status));
-
-            if (hasInvalidSubOrder) {
-                throw new BadRequestException(
-                        "Khong the chuyen don sang dang giao vi van con phan don chua san sang.");
-            }
-
-            List<SubOrder> subOrdersToShip = activeSubOrders.stream()
-                    .filter(subOrder -> subOrder.getStatus() != OrderStatus.SHIPPING)
-                    .collect(Collectors.toList());
-
-            if (!subOrdersToShip.isEmpty()) {
-                subOrdersToShip.forEach(subOrder -> subOrder.setStatus(OrderStatus.SHIPPING));
-                subOrderRepository.saveAll(subOrdersToShip);
-            }
+            throw new BadRequestException(
+                    "Don nay dang chay theo luong chi nhanh. Vui long ban giao bang phieu handover thay vi chuyen thang sang SHIPPING.");
         }
 
         order.setStatus(OrderStatus.SHIPPING);
