@@ -1,21 +1,33 @@
 package com.zone.agri.service;
 
 import com.zone.agri.dto.request.voucher.VoucherRequest;
+import com.zone.agri.dto.response.voucher.UserVoucherResponse;
 import com.zone.agri.dto.response.voucher.VoucherResponse;
+import com.zone.agri.entity.Order;
+import com.zone.agri.entity.User;
+import com.zone.agri.entity.UserVoucher;
 import com.zone.agri.entity.Voucher;
+import com.zone.agri.entity.enums.VoucherDiscountType;
 import com.zone.agri.entity.enums.VoucherStatus;
 import com.zone.agri.exception.BadRequestException;
 import com.zone.agri.exception.ConflictException;
 import com.zone.agri.exception.NotFoundException;
+import com.zone.agri.repository.UserRepository;
+import com.zone.agri.repository.UserVoucherRepository;
 import com.zone.agri.repository.VoucherRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,16 +38,42 @@ public class VoucherService {
     private static final BigDecimal MAX_PERCENT_ALLOW = new BigDecimal("50");
 
     private final VoucherRepository voucherRepository;
+    private final UserRepository userRepository;
+    private final UserVoucherRepository userVoucherRepository;
+
+    public record VoucherOrderEvaluation(
+            Voucher voucher,
+            UserVoucher userVoucher,
+            BigDecimal discountAmount) {
+    }
+
+    private record VoucherAvailability(
+            boolean visibleToUser,
+            boolean canApply,
+            String reason,
+            BigDecimal previewDiscountAmount,
+            int usageCount,
+            int remainingUsageCount) {
+    }
 
     public List<VoucherResponse> getAllVouchers(String keyword, VoucherStatus status) {
         List<Voucher> vouchers = voucherRepository.searchVouchers(keyword, status);
-        return vouchers.stream().map(this::convertToResponseWithDerivedStatus).collect(Collectors.toList());
+        return vouchers.stream().map(this::convertToResponseWithDerivedStatus).toList();
     }
 
     public VoucherResponse getVoucherById(Long id) {
         Voucher voucher = voucherRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Không tìm thấy voucher với ID: " + id));
         return convertToResponseWithDerivedStatus(voucher);
+    }
+
+    public String normalizeVoucherCode(String code) {
+        if (code == null) {
+            return null;
+        }
+
+        String normalized = code.trim().toUpperCase();
+        return normalized.isBlank() ? null : normalized;
     }
 
     private void validateBusinessRules(VoucherRequest request) {
@@ -48,7 +86,7 @@ public class VoucherService {
             throw new BadRequestException("Ngày kết thúc không được ở trong quá khứ.");
         }
 
-        if (request.getDiscountType() == com.zone.agri.entity.enums.VoucherDiscountType.PERCENT) {
+        if (request.getDiscountType() == VoucherDiscountType.PERCENT) {
             if (request.getValue() == null || request.getValue().compareTo(BigDecimal.ZERO) <= 0) {
                 throw new BadRequestException("Mức giảm phần trăm phải lớn hơn 0%");
             }
@@ -60,7 +98,7 @@ public class VoucherService {
             if (request.getValue().compareTo(MAX_PERCENT_ALLOW) > 0) {
                 throw new BadRequestException("Mức giảm phần trăm không được vượt quá 50%");
             }
-        } else if (request.getDiscountType() == com.zone.agri.entity.enums.VoucherDiscountType.FIXED) {
+        } else if (request.getDiscountType() == VoucherDiscountType.FIXED) {
             if (request.getValue() == null || request.getValue().compareTo(new BigDecimal("1000")) <= 0) {
                 throw new BadRequestException("Mức giảm (VNĐ) phải lớn hơn 1.000đ");
             }
@@ -77,14 +115,15 @@ public class VoucherService {
 
     @Transactional
     public VoucherResponse createVoucher(VoucherRequest request) {
-        if (voucherRepository.existsByCode(request.getCode())) {
+        String normalizedCode = requireNormalizedVoucherCode(request.getCode());
+        if (voucherRepository.existsByCode(normalizedCode)) {
             throw new ConflictException("Mã voucher '" + request.getCode() + "' đã tồn tại!");
         }
         
         validateBusinessRules(request);
 
         Voucher voucher = new Voucher();
-        mapToEntity(voucher, request);
+        mapToEntity(voucher, request, normalizedCode);
         return convertToResponse(voucherRepository.save(voucher));
     }
 
@@ -93,13 +132,15 @@ public class VoucherService {
         Voucher voucher = voucherRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Không tìm thấy voucher với ID: " + id));
 
-        if (voucherRepository.existsByCodeAndIdNot(request.getCode(), id)) {
+        String normalizedCode = requireNormalizedVoucherCode(request.getCode());
+
+        if (voucherRepository.existsByCodeAndIdNot(normalizedCode, id)) {
             throw new ConflictException("Mã voucher '" + request.getCode() + "' đã tồn tại!");
         }
         
         validateBusinessRules(request);
 
-        mapToEntity(voucher, request);
+        mapToEntity(voucher, request, normalizedCode);
         return convertToResponse(voucherRepository.save(voucher));
     }
 
@@ -110,9 +151,171 @@ public class VoucherService {
         voucherRepository.delete(voucher);
     }
 
-    private void mapToEntity(Voucher entity, VoucherRequest request) {
-        entity.setCode(request.getCode());
-        entity.setTitle(request.getTitle());
+    public List<UserVoucherResponse> getAvailableVouchersForUser(Long userId, BigDecimal orderSubtotal) {
+        LocalDateTime now = LocalDateTime.now();
+        List<Voucher> vouchers = voucherRepository.findByStatus(VoucherStatus.ACTIVE);
+        Map<Long, UserVoucher> userVoucherMap = buildUserVoucherMap(
+                userId,
+                vouchers.stream().map(Voucher::getId).toList());
+
+        return vouchers.stream()
+                .filter(voucher -> evaluateVoucherForUser(
+                        voucher,
+                        userVoucherMap.get(voucher.getId()),
+                        null,
+                        now).visibleToUser())
+                .map(voucher -> buildUserVoucherResponse(
+                        voucher,
+                        userVoucherMap.get(voucher.getId()),
+                        orderSubtotal,
+                        now))
+                .sorted((left, right) -> {
+                    if (Objects.equals(left.getSaved(), right.getSaved())) {
+                        return Long.compare(
+                                Objects.requireNonNullElse(right.getId(), 0L),
+                                Objects.requireNonNullElse(left.getId(), 0L));
+                    }
+                    return Boolean.TRUE.equals(right.getSaved()) ? 1 : -1;
+                })
+                .toList();
+    }
+
+    public List<UserVoucherResponse> getSavedVouchersForUser(Long userId, BigDecimal orderSubtotal) {
+        LocalDateTime now = LocalDateTime.now();
+        return userVoucherRepository.findSavedByUserId(userId).stream()
+                .map(userVoucher -> buildUserVoucherResponse(
+                        userVoucher.getVoucher(),
+                        userVoucher,
+                        orderSubtotal,
+                        now))
+                .toList();
+    }
+
+    @Transactional
+    public UserVoucherResponse saveVoucherForUser(Long userId, String code) {
+        User user = getUserById(userId);
+        String normalizedCode = requireNormalizedVoucherCode(code);
+        Voucher voucher = voucherRepository.findByCode(normalizedCode)
+                .orElseThrow(() -> new NotFoundException("Không tìm thấy voucher với mã: " + normalizedCode));
+
+        UserVoucher userVoucher = userVoucherRepository.findByUserAndVoucher(user, voucher)
+                .orElse(new UserVoucher(user, voucher, 0, false));
+        VoucherAvailability availability = evaluateVoucherForUser(voucher, userVoucher, null, LocalDateTime.now());
+        if (!availability.visibleToUser()) {
+            throw new BadRequestException(availability.reason());
+        }
+
+        userVoucher.setIsSaved(true);
+        if (userVoucher.getCreatedAt() == null) {
+            userVoucher.setCreatedAt(LocalDateTime.now());
+        }
+
+        UserVoucher savedUserVoucher = userVoucherRepository.save(userVoucher);
+        return buildUserVoucherResponse(voucher, savedUserVoucher, null, LocalDateTime.now());
+    }
+
+    @Transactional
+    public void removeSavedVoucherForUser(Long userId, String code) {
+        String normalizedCode = requireNormalizedVoucherCode(code);
+        UserVoucher userVoucher = userVoucherRepository.findByUserIdAndVoucherCode(userId, normalizedCode)
+                .orElseThrow(() -> new NotFoundException("Voucher chưa có trong ví của bạn"));
+
+        if (!Boolean.TRUE.equals(userVoucher.getIsSaved())) {
+            throw new NotFoundException("Voucher chưa có trong ví của bạn");
+        }
+
+        userVoucher.setIsSaved(false);
+        userVoucherRepository.save(userVoucher);
+    }
+
+    @Transactional
+    public VoucherOrderEvaluation validateVoucherForOrder(
+            User user,
+            String voucherCode,
+            BigDecimal orderSubtotal,
+            boolean consume,
+            boolean conflictOnUnavailable) {
+        String normalizedVoucherCode = normalizeVoucherCode(voucherCode);
+        if (normalizedVoucherCode == null) {
+            return new VoucherOrderEvaluation(null, null, BigDecimal.ZERO);
+        }
+
+        Voucher voucher = (consume ? voucherRepository.findByCodeForUpdate(normalizedVoucherCode)
+                : voucherRepository.findByCode(normalizedVoucherCode))
+                .orElseThrow(() -> voucherValidationException(conflictOnUnavailable, "Mã voucher không tồn tại"));
+
+        UserVoucher userVoucher = userVoucherRepository.findByUserAndVoucher(user, voucher)
+                .orElse(new UserVoucher(user, voucher, 0, false));
+        VoucherAvailability availability = evaluateVoucherForUser(
+                voucher,
+                userVoucher,
+                orderSubtotal,
+                LocalDateTime.now());
+
+        if (!availability.canApply()) {
+            throw voucherValidationException(conflictOnUnavailable, availability.reason());
+        }
+
+        if (consume) {
+            voucher.setQuantity(Objects.requireNonNullElse(voucher.getQuantity(), 0) - 1);
+            userVoucher.setUsageCount(Objects.requireNonNullElse(userVoucher.getUsageCount(), 0) + 1);
+            voucherRepository.save(voucher);
+            try {
+                userVoucherRepository.saveAndFlush(userVoucher);
+            } catch (DataIntegrityViolationException ex) {
+                throw new ConflictException("Bạn đang thanh toán đồng thời với cùng voucher này. Vui lòng thử lại.");
+            }
+        }
+
+        return new VoucherOrderEvaluation(voucher, userVoucher, availability.previewDiscountAmount());
+    }
+
+    @Transactional
+    public void restoreVoucherForOrder(Order order) {
+        if (order.getVoucher() == null) {
+            return;
+        }
+
+        Voucher voucher = voucherRepository.findByIdForUpdate(order.getVoucher().getId()).orElse(null);
+        if (voucher == null) {
+            return;
+        }
+
+        voucher.setQuantity(Objects.requireNonNullElse(voucher.getQuantity(), 0) + 1);
+        voucherRepository.save(voucher);
+
+        userVoucherRepository.findByUserAndVoucher(order.getUser(), voucher).ifPresent(userVoucher -> {
+            int currentUsage = Objects.requireNonNullElse(userVoucher.getUsageCount(), 0);
+            if (currentUsage > 0) {
+                userVoucher.setUsageCount(currentUsage - 1);
+                userVoucherRepository.save(userVoucher);
+            }
+        });
+    }
+
+    public BigDecimal calculateDiscountAmount(Voucher voucher, BigDecimal orderSubtotal) {
+        if (voucher == null || orderSubtotal == null || orderSubtotal.compareTo(BigDecimal.ZERO) <= 0) {
+            return BigDecimal.ZERO;
+        }
+
+        BigDecimal discountAmount;
+        if (VoucherDiscountType.PERCENT.equals(voucher.getDiscountType())) {
+            BigDecimal percentValue = voucher.getValue() != null ? voucher.getValue() : BigDecimal.ZERO;
+            BigDecimal calculatedDiscount = orderSubtotal.multiply(percentValue).divide(BigDecimal.valueOf(100));
+
+            discountAmount = voucher.getMaxDiscount() != null && voucher.getMaxDiscount().compareTo(BigDecimal.ZERO) > 0
+                    ? calculatedDiscount.min(voucher.getMaxDiscount())
+                    : calculatedDiscount;
+        } else {
+            discountAmount = voucher.getValue() != null ? voucher.getValue() : BigDecimal.ZERO;
+        }
+
+        return discountAmount.compareTo(orderSubtotal) > 0 ? orderSubtotal : discountAmount;
+    }
+
+    private void mapToEntity(Voucher entity, VoucherRequest request, String normalizedCode) {
+        entity.setCode(normalizedCode);
+        entity.setTitle(request.getTitle() != null ? request.getTitle().trim() : null);
         entity.setDiscountType(request.getDiscountType());
         entity.setValue(request.getValue());
         entity.setMaxUsagePerUser(request.getMaxUsagePerUser());
@@ -195,15 +398,134 @@ public class VoucherService {
                     return ok;
                 })
                 .map(this::convertToResponseWithDerivedStatus)
-                .collect(Collectors.toList());
+                .toList();
         
         log.info("Returning {} public vouchers to client", result.size());
         return result;
     }
 
     public VoucherResponse getVoucherByCode(String code) {
-        Voucher voucher = voucherRepository.findByCode(code)
+        String normalizedCode = requireNormalizedVoucherCode(code);
+        Voucher voucher = voucherRepository.findByCode(normalizedCode)
                 .orElseThrow(() -> new NotFoundException("Không tìm thấy voucher với mã: " + code));
         return convertToResponseWithDerivedStatus(voucher);
+    }
+
+    private String requireNormalizedVoucherCode(String code) {
+        String normalizedCode = normalizeVoucherCode(code);
+        if (normalizedCode == null) {
+            throw new BadRequestException("Mã voucher không được để trống");
+        }
+        return normalizedCode;
+    }
+
+    private User getUserById(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Người dùng không tồn tại"));
+    }
+
+    private Map<Long, UserVoucher> buildUserVoucherMap(Long userId, Collection<Long> voucherIds) {
+        if (voucherIds == null || voucherIds.isEmpty()) {
+            return Map.of();
+        }
+
+        return userVoucherRepository.findByUserIdAndVoucherIds(userId, voucherIds).stream()
+                .collect(Collectors.toMap(userVoucher -> userVoucher.getVoucher().getId(), Function.identity()));
+    }
+
+    private VoucherAvailability evaluateVoucherForUser(
+            Voucher voucher,
+            UserVoucher userVoucher,
+            BigDecimal orderSubtotal,
+            LocalDateTime now) {
+        int usageCount = Objects.requireNonNullElse(userVoucher != null ? userVoucher.getUsageCount() : null, 0);
+        int maxUsagePerUser = voucher.getMaxUsagePerUser() != null ? voucher.getMaxUsagePerUser() : 1;
+        int remainingUsageCount = Math.max(0, maxUsagePerUser - usageCount);
+
+        if (voucher.getStatus() != VoucherStatus.ACTIVE
+                || voucher.getStartDate() == null
+                || voucher.getEndDate() == null
+                || now.isBefore(voucher.getStartDate())
+                || now.isAfter(voucher.getEndDate())) {
+            return new VoucherAvailability(
+                    false,
+                    false,
+                    "Voucher không hợp lệ hoặc đã hết hạn",
+                    BigDecimal.ZERO,
+                    usageCount,
+                    remainingUsageCount);
+        }
+
+        if (Objects.requireNonNullElse(voucher.getQuantity(), 0) <= 0) {
+            return new VoucherAvailability(
+                    false,
+                    false,
+                    "Voucher này đã hết lượt sử dụng trên hệ thống",
+                    BigDecimal.ZERO,
+                    usageCount,
+                    remainingUsageCount);
+        }
+
+        if (usageCount >= maxUsagePerUser) {
+            return new VoucherAvailability(
+                    false,
+                    false,
+                    "Bạn đã sử dụng tối đa số lượt cho phép của voucher này",
+                    BigDecimal.ZERO,
+                    usageCount,
+                    remainingUsageCount);
+        }
+
+        BigDecimal minOrderValue = voucher.getMinOrderValue() != null ? voucher.getMinOrderValue() : BigDecimal.ZERO;
+        if (orderSubtotal != null && orderSubtotal.compareTo(minOrderValue) < 0) {
+            return new VoucherAvailability(
+                    true,
+                    false,
+                    "Đơn hàng chưa đạt giá trị tối thiểu để sử dụng voucher này",
+                    BigDecimal.ZERO,
+                    usageCount,
+                    remainingUsageCount);
+        }
+
+        return new VoucherAvailability(
+                true,
+                true,
+                null,
+                orderSubtotal != null ? calculateDiscountAmount(voucher, orderSubtotal) : BigDecimal.ZERO,
+                usageCount,
+                remainingUsageCount);
+    }
+
+    private UserVoucherResponse buildUserVoucherResponse(
+            Voucher voucher,
+            UserVoucher userVoucher,
+            BigDecimal orderSubtotal,
+            LocalDateTime now) {
+        VoucherAvailability availability = evaluateVoucherForUser(voucher, userVoucher, orderSubtotal, now);
+
+        return UserVoucherResponse.builder()
+                .id(voucher.getId())
+                .code(voucher.getCode())
+                .title(voucher.getTitle())
+                .discountType(voucher.getDiscountType())
+                .value(voucher.getValue())
+                .maxDiscount(voucher.getMaxDiscount())
+                .maxUsagePerUser(voucher.getMaxUsagePerUser())
+                .minOrderValue(voucher.getMinOrderValue())
+                .startDate(voucher.getStartDate())
+                .endDate(voucher.getEndDate())
+                .quantity(voucher.getQuantity())
+                .status(deriveVoucherStatus(voucher))
+                .saved(Boolean.TRUE.equals(userVoucher != null ? userVoucher.getIsSaved() : null))
+                .usageCount(availability.usageCount())
+                .remainingUsageCount(availability.remainingUsageCount())
+                .canApply(availability.canApply())
+                .availabilityReason(availability.reason())
+                .previewDiscountAmount(availability.previewDiscountAmount())
+                .build();
+    }
+
+    private RuntimeException voucherValidationException(boolean conflictOnUnavailable, String message) {
+        return conflictOnUnavailable ? new ConflictException(message) : new BadRequestException(message);
     }
 }
